[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/theme/Barlow-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/theme/Barlow-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://components/search_cards/filter_group.gd" type="Script" id=4]
[ext_resource path="res://components/search_cards/elements/card_filter_element.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 20.0
bg_color = Color( 0, 0.0509804, 0.0980392, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="SearchCardsComponent" type="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0
theme = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="MainContainer" type="HBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1860.0
margin_bottom = 1020.0
custom_constants/separation = 20

[node name="SearchCardBuilder" type="VBoxContainer" parent="Margin/MainContainer"]
margin_right = 1816.0
margin_bottom = 1000.0
size_flags_horizontal = 3

[node name="FilterGroupPanel" type="PanelContainer" parent="Margin/MainContainer/SearchCardBuilder"]
margin_right = 1816.0
margin_bottom = 317.0
rect_min_size = Vector2( 0, 300 )
custom_styles/panel = SubResource( 1 )

[node name="FilterGroup" type="VBoxContainer" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1796.0
margin_bottom = 297.0
custom_constants/separation = 10
script = ExtResource( 4 )

[node name="TitleBar" type="HBoxContainer" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup"]
margin_right = 1776.0
margin_bottom = 29.0
custom_constants/separation = 30

[node name="Headline" type="Label" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup/TitleBar"]
margin_right = 57.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "Filter"

[node name="FilterContainer" type="HFlowContainer" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup"]
margin_top = 39.0
margin_right = 1776.0
margin_bottom = 287.0
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="FilterElementWrapper" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup/FilterContainer" instance=ExtResource( 5 )]

[node name="OperatorButton" type="Button" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup/FilterContainer"]
margin_left = 220.0
margin_top = 107.0
margin_right = 271.0
margin_bottom = 140.0
size_flags_vertical = 4
text = "and"

[node name="FilterElementWrapper2" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup/FilterContainer" instance=ExtResource( 5 )]
margin_left = 291.0
margin_right = 491.0

[node name="AddFilterElementButton" type="Button" parent="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup/FilterContainer"]
margin_left = 511.0
margin_right = 559.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 248 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "+"

[node name="Control" type="Control" parent="Margin/MainContainer/SearchCardBuilder"]
margin_top = 321.0
margin_right = 1816.0
margin_bottom = 910.0
size_flags_vertical = 3

[node name="AggregationPanel" type="PanelContainer" parent="Margin/MainContainer/SearchCardBuilder"]
margin_top = 914.0
margin_right = 1816.0
margin_bottom = 1000.0
size_flags_vertical = 8
custom_styles/panel = SubResource( 1 )

[node name="AddFilterElementButton" type="Button" parent="Margin/MainContainer/SearchCardBuilder/AggregationPanel"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1796.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Aggregate Result"

[node name="VSeparator" type="VSeparator" parent="Margin/MainContainer"]
margin_left = 1836.0
margin_right = 1840.0
margin_bottom = 1000.0

[node name="ResultContainer" type="VBoxContainer" parent="Margin/MainContainer"]
visible = false
margin_left = 942.0
margin_right = 1840.0
margin_bottom = 1000.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Margin/MainContainer/ResultContainer"]
margin_right = 898.0
margin_bottom = 21.0
text = "Result"

[node name="TextEdit" type="TextEdit" parent="Margin/MainContainer/ResultContainer"]
margin_top = 25.0
margin_right = 898.0
margin_bottom = 1000.0
size_flags_vertical = 3
wrap_enabled = true

[connection signal="pressed" from="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup/FilterContainer/AddFilterElementButton" to="Margin/MainContainer/SearchCardBuilder/FilterGroupPanel/FilterGroup" method="_on_AddFilterElementButton_pressed"]
